# channel-helper-rs

./: .gitignore  Cargo.toml  diesel.toml  env.example
migrations/2025-03-14-215341_create_tables/: down.sql  up.sql
migrations/2025-03-15-135650_add_post_removed_field/: down.sql  up.sql
src/: cli.rs  config.rs  main.rs  utils.rs
src/database/: migrations.rs  mod.rs  models.rs  schema.rs
src/telegram_handlers/: handle_animation.rs  handle_del.rs  handle_photo.rs  handle_unknown.rs  handle_video.rs  mod.rs
src/workers/: api.rs  mod.rs  sender.rs  telegram_bot.rs  uploader.rs
