[package]
name = "channel-helper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.26"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }
reqwest = "0.12.12"
image = "0.24.8"
imghash = "1.3.1"
uuid = { version = "1.15.1", features = ["v7"] }
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "env"] }
axum = { version = "0.8.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
humantime = "2.2.0"
diesel = { version = "2.2.8", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "uuid", "time", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
pre-commit-hooks = "0.3.0"

[package.metadata.precommit]
fmt = "cargo fmt"
